examples/test/testpolicy15937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15937
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key11: value33
      key35: value14
      key16: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value21
          key11: value43
          key32: value45
      podSelector:
        matchLabels:
          key16: value29
          key6: value37
          key24: value39
